# hr_server

./: CLAUDE.md  VR_UPDATES.md  app.py  beacon_manager.py  data_store.py  hrs_unity  hrv_analysis.py  listen_beacon.py  main.py  polar_manager.py  pyproject.toml  session_manager.py  test_udp.py  ws_manager.py
.claude/: settings.local.json
py38/: app.py  beacon_manager.py  data_store.py  hrv_analysis.py  main.py  polar_manager.py  pyproject.toml  session_manager.py  ws_manager.py
py38/static/js/: app.js
py38/templates/: index.html
static/css/: style.css
static/js/: app.js
templates/: index.html
