[project]
name = "heart-rate-streaming"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "bleak>=2.1.1",
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "numpy>=2.4.3",
    "polar-python>=1.0.0",
    "uvicorn[standard]>=0.41.0",
    "websockets>=16.0",
]
