[project]
name = "heart-rate-streaming"
version = "0.1.0"
description = "HRV Biofeedback Control Panel (Python 3.8 compatible)"
requires-python = ">=3.8,<3.9"
dependencies = [
    "bleak>=0.22.0,<0.23",
    "fastapi>=0.100.0,<0.125",
    "jinja2>=3.1.0,<3.2",
    "numpy>=1.24.0,<1.25",
    "uvicorn[standard]>=0.23.0,<0.30",
    "websockets>=11.0,<14",
]
